scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project__c/Demo_Project__c.object-meta.xml
<CustomObject>
    <label>Demo Project</label>
    <pluralLabel>Demo Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>