scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project__c/fields/Actual_Completion__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion__c</fullName>
    <label>Actual Completion</label>
    <type>Date</type>
</CustomField>