scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project__c/fields/Approval_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Approval_Sent_On__c</fullName>
    <label>Approval Sent On</label>
    <type>Date</type>
</CustomField>