scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project__c/fields/Approval_Statement__c.field-meta.xml
<CustomField>
    <fullName>Approval_Statement__c</fullName>
    <label>Approval Statement</label>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>