scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Projects</relationshipName>
    <relationshipLabel>Projects</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>