scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project__c/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <label>Client Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Client_Projects</relationshipName>
    <relationshipLabel>Client Projects</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>