scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project__c/fields/Client_Signer_Title__c.field-meta.xml
<CustomField>
    <fullName>Client_Signer_Title__c</fullName>
    <label>Client Signer Title</label>
    <type>Text</type>
    <length>120</length>
</CustomField>