scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project__c/fields/Last_Signature_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Signature_Request_Id__c</fullName>
    <label>Last Signature Request Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>