scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project__c/fields/Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete__c</fullName>
    <label>Percent Complete</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>