scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Current Phase</label>
    <type>Text</type>
    <length>80</length>
</CustomField>