scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project__c/fields/PM_Email__c.field-meta.xml
<CustomField>
    <fullName>PM_Email__c</fullName>
    <label>PM Email</label>
    <type>Email</type>
</CustomField>