scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <label>Project Code</label>
    <type>Text</type>
    <length>30</length>
</CustomField>