scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <label>Project Manager</label>
    <type>Text</type>
    <length>120</length>
</CustomField>