scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project__c/fields/Scope_Summary__c.field-meta.xml
<CustomField>
    <fullName>Scope_Summary__c</fullName>
    <label>Scope Summary</label>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>