scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                    <default>true</default>
                    <label>Planning</label>
                </value>
                <value>
                    <fullName>In Flight</fullName>
                </value>
                <value>
                    <fullName>Pending Client Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>