scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project__c/fields/Target_Completion__c.field-meta.xml
<CustomField>
    <fullName>Target_Completion__c</fullName>
    <label>Target Completion</label>
    <type>Date</type>
</CustomField>